--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
+				<section
+  data-markdown="README.md"
+  data-separator="^^^"
+  data-separator-vertical="@@@"
+  data-separator-notes="^Note:"
+  data-charset="iso-8859-15"
+></section>
 				<section>Slide 2</section>
 			</div>
 		</div>
