--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
 
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css">
+		<style>
+			.reveal section p {
+			font-size: 0.6em;
+		  }
+		  .reveal section li {
+			font-size: 0.6em;
+		  }
+		</style>
 	</head>
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section
-  data-markdown="README.md"
-  data-separator="^^^"
-  data-separator-vertical="@@@"
-  data-separator-notes="^Note:"
-  data-charset="iso-8859-15"
-></section>
+				<section data-markdown="README.md" data-separator="^\n\n\n" data-separator-vertical="@\n\n"></section>
 				
 			</div>
 		</div>
