--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Diving into Reinforcement learning via AWS Deep Racer</title>
+		<title>React 1: Unleash the future of web</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
@@ -14,18 +14,12 @@
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css">
 		<style>
-			.reveal section p {
-			font-size: 0.6em;
-		  }
-		  .reveal section li {
-			font-size: 0.6em;
-		  }
 		</style>
 	</head>
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-markdown="README.md" data-separator="^\n\n\n" data-separator-vertical="@\n\n"></section>
+				<section data-markdown="README.md" data-separator="\n\n-" data-separator-vertical="----"></section>
 				
 			</div>
 		</div>
